codemirror layout break fix

--- a/app/styles/parts/_import-csv.scss
+++ b/app/styles/parts/_import-csv.scss
@@ -1,7 +1,8 @@
 .import-step1 {
-  
+
   .cm-s-default {
     width: 100%;
+    max-width:800px; /* Prevent Codemirror to break */
     border: 1px solid #f0f0f0;
     border-left: 2px solid #9e9e9e;
     height: 300px;
@@ -10,6 +11,6 @@
   .import-button {
     text-align: left;
   }
-  
+
 }
 
